Refactoring Mappers, Services and Tests